--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "preinstall": "chmod +x node_modules/.bin/react-scripts || exit 0",
     "dev": "nodemon index.js",
     "start": "set PORT=4000 && react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
